add admin-panel features

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -19,7 +19,7 @@
     <div class="left-side-header">
       <nav>
         <% if (user && user.role==='admin' ) { %>
-          <a href="/admin">مدیریت</a>
+          <a id="admin-btn-page" href="/admin">مدیریت</a>
           <% } %>
       </nav>
 
