--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>سبد خرید - فروشگاه فلان</title>
   <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/stylesheet/basket.css">
+  <link rel="stylesheet" href="/stylesheet/basket-page.css">
 </head>
 
 <body>
